Add: subquestions only appears in subquestion list of parent. Fix: drop of constraint goes first